--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "npm-run-all db-remote:neon db:migrate --parallel dev:*",
     "build:next": "next build --webpack",
     "build-local": "run-p db-server:memory build:next --race",
-    "build": "run-s db:migrate build:next",
+    "build": "npm run build:next",
     "start": "next start",
     "build-stats": "cross-env ANALYZE=true npm run build",
     "clean": "rimraf .next out coverage",
